[package]
name = "quickwit-telemetry"
version = "0.2.1"
authors = ["Quickwit, Inc. <hello@quickwit.io>"]
edition = "2021"
license = "AGPL-3.0-or-later" # For a commercial, license, contact hello@quickwit.io
description = "Quickwit's telemetry"
repository = "https://github.com/quickwit-oss/quickwit"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"


[dependencies]

once_cell = "1.10.0"
reqwest = { version = "0.11", default-features=false, features = ["json", "rustls-tls"] }
# It is actually not used directly the goal is to fix the version
# used by reqwest. 0.8.30 has an unclear license.
encoding_rs = "=0.8.29"
tokio = {version = "1", features = ["full"]}
serde = {version="1", features = ["derive"]}
uuid = { version= "0.8", features = ["v4", "serde"]}
tracing = "0.1.29"
async-trait = "0.1"
hostname = "0.3"
username = "0.2"
md5 = "0.7"
