[package]
name = "quickwit-telemetry"
version = "0.3.0"
authors = ["Quickwit, Inc. <hello@quickwit.io>"]
edition = "2021"
license = "AGPL-3.0-or-later" # For a commercial, license, contact hello@quickwit.io
description = "Quickwit's telemetry"
repository = "https://github.com/quickwit-oss/quickwit"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"

[dependencies]
async-trait = "0.1"
hostname = "0.3"
md5 = "0.7"
once_cell = "1.12.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.29"
username = "0.2"
uuid = { version = "1.1", features = ["v4", "serde"] }
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "rustls-tls"
] }
# It is actually not used directly the goal is to fix the version
# used by reqwest. 0.8.30 has an unclear license.
encoding_rs = "=0.8.29"
