[workspace]
resolver = "2"
members = [
  "quickwit-actors",
  "quickwit-aws",
  "quickwit-cli",
  "quickwit-cluster",
  "quickwit-codegen",
  "quickwit-codegen/example",
  "quickwit-common",
  "quickwit-config",
  "quickwit-control-plane",
  "quickwit-index-management",
  "quickwit-datetime",
  "quickwit-directories",
  "quickwit-doc-mapper",
  "quickwit-indexing",
  "quickwit-ingest",
  "quickwit-integration-tests",
  "quickwit-jaeger",
  "quickwit-janitor",
  "quickwit-lambda",
  "quickwit-macros",
  "quickwit-metastore",

  # Disabling metastore-utils from the quickwit projects to ease build/deps.
  # We can reenable it when we need it.
  # "quickwit-metastore-utils",
  "quickwit-opentelemetry",
  "quickwit-proto",
  "quickwit-query",
  "quickwit-rest-client",
  "quickwit-search",
  "quickwit-serve",
  "quickwit-storage",
  "quickwit-telemetry",
]

# The following list excludes `quickwit-metastore-utils` and `quickwit-lambda`
# from the default member to ease build/deps.
default-members = [
  "quickwit-actors",
  "quickwit-aws",
  "quickwit-cli",
  "quickwit-cluster",
  "quickwit-codegen",
  "quickwit-codegen/example",
  "quickwit-common",
  "quickwit-config",
  "quickwit-control-plane",
  "quickwit-datetime",
  "quickwit-directories",
  "quickwit-doc-mapper",
  "quickwit-index-management",
  "quickwit-indexing",
  "quickwit-ingest",
  "quickwit-integration-tests",
  "quickwit-jaeger",
  "quickwit-janitor",
  "quickwit-macros",
  "quickwit-metastore",
  "quickwit-opentelemetry",
  "quickwit-proto",
  "quickwit-query",
  "quickwit-rest-client",
  "quickwit-search",
  "quickwit-serve",
  "quickwit-storage",
  "quickwit-telemetry",
]

[workspace.package]
version = "0.8.0"
edition = "2021"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"
repository = "https://github.com/quickwit-oss/quickwit"
authors = ["Quickwit, Inc. <hello@quickwit.io>"]
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
arc-swap = "1.7"
assert-json-diff = "2"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
async-speed-limit = "0.4"
async-trait = "0.1"
base64 = "0.22"
binggan = { version = "0.14" }
bytes = { version = "1", features = ["serde"] }
bytesize = { version = "1.3.3", features = ["serde"] }
bytestring = "1.4.0"
chitchat = { git = "https://github.com/quickwit-oss/chitchat.git", rev = "13968f0" }
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "std",
] }
clap = { version = "4.5.0", features = ["env", "string"] }
coarsetime = "0.1.33"
colored = "2.2.0"
console-subscriber = "0.1.8"
criterion = { version = "0.5", features = ["async_tokio"] }
cron = "0.12.0"
dialoguer = "0.10.3"
dotenvy = "0.15"
dyn-clone = "1.0.10"
enum-iterator = "1.5"
env_logger = "0.10"
fail = "0.5"
flume = "0.11"
fnv = "1"
flate2 = "1.0"
futures = "0.3"
futures-util = { version = "0.3.25", default-features = false }
glob = "0.3"
google-cloud-auth = "0.12.0"
google-cloud-gax = "0.15.0"
google-cloud-googleapis = { version = "0.10.0", features = ["pubsub"] }
google-cloud-pubsub = "0.18.0"
heck = "0.5.0"
hex = "0.4.3"
home = "0.5.4"
hostname = "0.4"
http = "1.1.0"
http-serde = "2.1.1"
humantime = "2.2.0"
hyper = { version = "0.14", features = [
  "client",
  "http1",
  "http2",
  "server",
  "stream",
  "tcp",
] }
hyper-rustls = "0.27"
indexmap = { version = "2.9.0", features = ["serde"] }
indicatif = "0.17.3"
itertools = "0.14"
json_comments = "0.2"
libz-sys = "1.1.8"
lru = "0.13"
lindera-core = "0.27.0"
lindera-dictionary = "0.27.0"
lindera-tokenizer = { version = "0.27.0", features = [
  "cc-cedict-compress",
  "cc-cedict",
  "ipadic-compress",
  "ipadic",
  "ko-dic-compress",
  "ko-dic",
] }
matches = "0.1.9"
md5 = "0.7"
mime_guess = "2.0.4"
mockall = "0.11"
mrecordlog = { git = "https://github.com/quickwit-oss/mrecordlog", rev = "306c0a7" }
new_string_template = "1.5.1"
nom = "7.1.3"
numfmt = "1.1.1"
once_cell = "1"
oneshot = "0.1.8"
openssl = { version = "0.10.70", default-features = false }
openssl-probe = "0.1.5"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = "0.27"
ouroboros = "0.18.0"
percent-encoding = "2.3.1"
pin-project = "1.1.0"
pnet = { version = "0.33.0", features = ["std"] }
postcard = { version = "1.1.1", features = [
  "use-std",
], default-features = false }
predicates = "3"
prettyplease = "0.2.0"
pprof = { version = "0.13", features = ["flamegraph"] }
proc-macro2 = "1.0.50"
prometheus = { version = "0.13", features = ["process"] }
proptest = "1"
prost = { version = "0.13.3", default-features = false, features = [
  "prost-derive",
] }
prost-build = "0.11.6"
prost-types = "0.13.3"
pulsar = { version = "6.3", default-features = false, features = [
  "auth-oauth2",
  "compression",
  "tokio-runtime",
] }
quote = "1.0.23"
rand = "0.9"
rand_distr = "0.4"
rayon = "1.10"
rdkafka = { version = "0.33", default-features = false, features = [
  "cmake-build",
  "libz",
  "ssl",
  "tokio",
  "zstd",
] }
regex = "1.10.0"
regex-syntax = "0.8"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
rust-embed = "6.8.1"
rustls = "0.23"
rustls-pemfile = "2.2.0"
sea-query = { version = "0.30" }
sea-query-binder = { version = "0.5", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
] }
# ^1.0.184 due to serde-rs/serde#2538
serde = { version = "1.0.184", features = ["derive", "rc"] }
serde_json = "1.0"
serde_json_borrow = "0.5"
serde_qs = { version = "0.12", features = ["warp"] }
serde_with = "3.12.0"
serde_yaml = "0.9"
serial_test = { version = "3.1.1", features = ["file_locks"] }
siphasher = "0.3"
smallvec = "1"
sqlx = { version = "0.7", features = [
  "migrate",
  "postgres",
  "runtime-tokio-rustls",
  "time",
] }
syn = { version = "2.0.11", features = ["extra-traits", "full", "parsing"] }
sync_wrapper = "1.0.2"
sysinfo = "0.33.1"
tabled = { version = "0.14", features = ["color"] }
tempfile = "3"
thiserror = "2"
thousands = "0.2.0"
tikv-jemalloc-ctl = "0.5"
tikv-jemallocator = "0.5"
time = { version = "0.3", features = ["std", "formatting", "macros"] }
tokio = { version = "1.44", features = ["full"] }
tokio-metrics = { version = "0.3.1", features = ["rt"] }
tokio-rustls = { version = "0.26.1", default-features = false }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["full"] }
toml = "0.7.6"
tonic = { version = "0.12.3", features = ["gzip"] }
tonic-build = "0.9.0"
tonic-health = "0.9.0"
tonic-reflection = "0.9" 
tower = { version = "0.5.2", features = [
  "balance",
  "buffer",
  "load",
  "retry",
  "util",
] }
tower-http = { version = "0.4.0", features = [
  "compression-zstd",
  "compression-gzip",
  "cors",
] }
tracing = "0.1"
tracing-opentelemetry = "0.28"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "json",
  "std",
  "time",
] }
ttl_cache = "0.5"
typetag = "0.2"
ulid = "1.2"
username = "0.2"
utoipa = { version = "4.2", features = ["time", "ulid"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
vrl = { version = "0.22", default-features = false, features = [
  "compiler",
  "diagnostic",
  "stdlib",
  "value",
] }
warp = "0.3"
whichlang = "0.1"
wiremock = "0.5"
zstd = "0.13.0"

aws-config = "1.5.4"
aws-credential-types = { version = "1.2", features = ["hardcoded-credentials"] }
aws-runtime = "1.3.1"
aws-sdk-kinesis = "1.37"
aws-sdk-s3 = "=1.62"
aws-sdk-sqs = "1.36"
aws-smithy-async = "1.2"
aws-smithy-runtime = "1.6.2"
aws-smithy-types = { version = "1.2", features = ["byte-stream-poll-next"] }
aws-types = "1.3.3"

azure_core = { version = "0.13.0", features = ["enable_reqwest_rustls"] }
azure_storage = { version = "0.13.0", default-features = false, features = [
  "enable_reqwest_rustls",
] }
azure_storage_blobs = { version = "0.13.0", default-features = false, features = [
  "enable_reqwest_rustls",
] }

opendal = { version = "0.44", default-features = false }
reqsign = { version = "0.14", default-features = false }

quickwit-actors = { path = "quickwit-actors" }
quickwit-aws = { path = "quickwit-aws" }
quickwit-cli = { path = "quickwit-cli" }
quickwit-cluster = { path = "quickwit-cluster" }
quickwit-codegen = { path = "quickwit-codegen" }
quickwit-codegen-example = { path = "quickwit-codegen/example" }
quickwit-common = { path = "quickwit-common" }
quickwit-config = { path = "quickwit-config" }
quickwit-control-plane = { path = "quickwit-control-plane" }
quickwit-index-management = { path = "quickwit-index-management" }
quickwit-datetime = { path = "quickwit-datetime" }
quickwit-directories = { path = "quickwit-directories" }
quickwit-doc-mapper = { path = "quickwit-doc-mapper" }
quickwit-indexing = { path = "quickwit-indexing" }
quickwit-ingest = { path = "quickwit-ingest" }
quickwit-integration-tests = { path = "quickwit-integration-tests" }
quickwit-jaeger = { path = "quickwit-jaeger" }
quickwit-janitor = { path = "quickwit-janitor" }
quickwit-macros = { path = "quickwit-macros" }
quickwit-metastore = { path = "quickwit-metastore" }
quickwit-opentelemetry = { path = "quickwit-opentelemetry" }
quickwit-proto = { path = "quickwit-proto" }
quickwit-query = { path = "quickwit-query" }
quickwit-rest-client = { path = "quickwit-rest-client" }
quickwit-search = { path = "quickwit-search" }
quickwit-serve = { path = "quickwit-serve" }
quickwit-storage = { path = "quickwit-storage" }
quickwit-telemetry = { path = "quickwit-telemetry" }

tantivy = { git = "https://github.com/quickwit-oss/tantivy/", rev = "80f5f1e", default-features = false, features = [
  "lz4-compression",
  "mmap",
  "quickwit",
  "zstd-compression",
] }
tantivy-fst = "0.5"

# This is actually not used directly the goal is to fix the version
# used by reqwest.
encoding_rs = "=0.8.35"

[patch.crates-io]
sasl2-sys = { git = "https://github.com/quickwit-oss/rust-sasl/", rev = "085a4c7" }

## this patched version of tracing helps better understand what happens inside futures (when are
## they polled, how long does poll take...)
#tracing = { git = "https://github.com/trinity-1686a/tracing.git", rev = "6806cac3" }
#tracing-attributes = { git = "https://github.com/trinity-1686a/tracing.git", rev = "6806cac3" }
#tracing-core = { git = "https://github.com/trinity-1686a/tracing.git", rev = "6806cac3" }
#tracing-futures = { git = "https://github.com/trinity-1686a/tracing.git", rev = "6806cac3" }
#tracing-log = { git = "https://github.com/trinity-1686a/tracing.git", rev = "6806cac3" }
#tracing-opentelemetry = { git = "https://github.com/trinity-1686a/tracing.git", rev = "6806cac3" }
#tracing-subscriber = { git = "https://github.com/trinity-1686a/tracing.git", rev = "6806cac3" }

[profile.dev]
debug = false

[profile.release]
lto = "thin"
