[workspace]
resolver = "2"
members = [
  "quickwit-actors",
  "quickwit-aws",
  "quickwit-cli",
  "quickwit-cluster",
  "quickwit-codegen",
  "quickwit-codegen/example",
  "quickwit-common",
  "quickwit-config",
  "quickwit-control-plane",
  "quickwit-datetime",
  "quickwit-directories",
  "quickwit-doc-mapper",
  "quickwit-index-management",
  "quickwit-indexing",
  "quickwit-ingest",
  "quickwit-integration-tests",
  "quickwit-jaeger",
  "quickwit-janitor",
  "quickwit-macros",
  "quickwit-metastore",

  # Disabling metastore-utils from the quickwit projects to ease build/deps.
  # We can reenable it when we need it.
  # "quickwit-metastore-utils",
  "quickwit-opentelemetry",
  "quickwit-proto",
  "quickwit-query",
  "quickwit-rest-client",
  "quickwit-search",
  "quickwit-serve",
  "quickwit-storage",
  "quickwit-telemetry",
]

# The following list excludes `quickwit-metastore-utils`
# from the default member to ease build/deps.
default-members = [
  "quickwit-actors",
  "quickwit-aws",
  "quickwit-cli",
  "quickwit-cluster",
  "quickwit-codegen",
  "quickwit-codegen/example",
  "quickwit-common",
  "quickwit-config",
  "quickwit-control-plane",
  "quickwit-datetime",
  "quickwit-directories",
  "quickwit-doc-mapper",
  "quickwit-index-management",
  "quickwit-indexing",
  "quickwit-ingest",
  "quickwit-integration-tests",
  "quickwit-jaeger",
  "quickwit-janitor",
  "quickwit-macros",
  "quickwit-metastore",
  "quickwit-opentelemetry",
  "quickwit-proto",
  "quickwit-query",
  "quickwit-rest-client",
  "quickwit-search",
  "quickwit-serve",
  "quickwit-storage",
  "quickwit-telemetry",
]

[workspace.package]
version = "0.8.0"
edition = "2024"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"
repository = "https://github.com/quickwit-oss/quickwit"
authors = ["Quickwit, Inc. <hello@quickwit.io>"]
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
arc-swap = "1.7"
assert-json-diff = "2"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
async-speed-limit = "0.4"
async-trait = "0.1"
backtrace = "0.3"
base64 = "0.22"
binggan = { version = "0.14" }
bitpacking = "0.9.2"
bytes = { version = "1", features = ["serde"] }
bytesize = { version = "1.3", features = ["serde"] }
bytestring = "1.4"
chitchat = { git = "https://github.com/quickwit-oss/chitchat.git", rev = "bd54c81" }
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "std",
] }
clap = { version = "4.5", features = ["env", "string"] }
coarsetime = "0.1"
colored = "2.2"
console-subscriber = "0.1"
criterion = { version = "0.5", features = ["async_tokio"] }
cron = "0.12"
dialoguer = "0.10"
dotenvy = "0.15"
dyn-clone = "1.0"
enum-iterator = "1.5"
env_logger = "0.10"
fail = "0.5"
flate2 = "1.1"
flume = "0.11"
fnv = "1"
futures = "0.3"
futures-util = { version = "0.3", default-features = false }
glob = "0.3"
google-cloud-auth = "0.12"
google-cloud-gax = "0.15"
google-cloud-googleapis = { version = "0.10", features = ["pubsub"] }
google-cloud-pubsub = "0.18"
heck = "0.5"
hex = "0.4"
home = "0.5"
hostname = "0.3"
http = "1.3"
http-body = "1.0"
http-body-util = "0.1"
http-serde = "2.1"
humantime = "2.2"
hyper = { version = "1.7", features = ["client", "http1", "http2", "server"] }
hyper-rustls = "0.27"
hyper-util = { version = "0.1", features = ["full"] }
indexmap = { version = "2.9", features = ["serde"] }
indicatif = "0.17"
itertools = "0.14"
json_comments = "0.2"
libz-sys = "1.1"
lindera-core = "0.27"
lindera-dictionary = "0.27"
lindera-tokenizer = { version = "0.27", features = [
  "cc-cedict-compress",
  "cc-cedict",
  "ipadic-compress",
  "ipadic",
  "ko-dic-compress",
  "ko-dic",
] }
lru = "0.13"
matches = "0.1"
md5 = "0.7"
mime_guess = "2.0"
mockall = "0.11"
mrecordlog = { git = "https://github.com/quickwit-oss/mrecordlog", rev = "306c0a7" }
new_string_template = "1.5"
nom = "7.1"
numfmt = "1.1"
once_cell = "1"
oneshot = "0.1"
openssl = { version = "0.10", default-features = false }
openssl-probe = "0.1"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = "0.27"
ouroboros = "0.18"
percent-encoding = "2.3"
pin-project = "1.1"
pnet = { version = "0.33", features = ["std"] }
postcard = { version = "1.1", features = [
  "use-std",
], default-features = false }
pprof = { version = "0.14", features = ["flamegraph"] }
predicates = "3"
prettyplease = "0.2"
proc-macro2 = "1.0"
prometheus = { version = "0.13", features = ["process"] }
proptest = "1"
prost = { version = "0.13", default-features = false, features = [
  "prost-derive",
] }
prost-build = "0.13"
prost-types = "0.13"
pulsar = { version = "6.3", default-features = false, features = [
  "auth-oauth2",
  "compression",
  "tokio-runtime",
] }
quote = "1.0"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.10"
rdkafka = { version = "0.38", default-features = false, features = [
  "cmake-build",
  "libz",
  "ssl",
  "tokio",
  "zstd",
] }
regex = "1.11"
regex-syntax = "0.8"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
rust-embed = "6.8"
rustc-hash = "2.1"
rustls = "0.23"
rustls-pemfile = "2.2"
sea-query = { version = "0.32" }
sea-query-binder = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
] }
# ^1.0.184 due to serde-rs/serde#2538
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0"
serde_json_borrow = "0.5"
serde_qs = { version = "0.12" }
serde_with = "3.12"
serde_yaml = "0.9"
serial_test = { version = "3.2", features = ["file_locks"] }
siphasher = "1.0"
smallvec = "1"
sqlx = { version = "0.8", features = [
  "migrate",
  "postgres",
  "runtime-tokio-rustls",
  "time",
] }
syn = { version = "2.0", features = ["extra-traits", "full", "parsing"] }
sync_wrapper = "1"
sysinfo = "0.33"
tabled = { version = "0.14", features = ["color"] }
tempfile = "3"
thiserror = "2"
thousands = "0.2"
tikv-jemalloc-ctl = "0.5"
tikv-jemallocator = "0.5"
time = { version = "0.3", features = ["std", "formatting", "macros"] }
tokio = { version = "1.45", features = ["full"] }
tokio-metrics = { version = "0.3", features = ["rt"] }
tokio-rustls = { version = "0.26", default-features = false }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["full"] }
toml = "0.7"
tonic = { version = "0.13", features = [
  "_tls-any",
  "gzip",
  "tls-native-roots",
  "zstd",
] }
tonic-build = "0.13"
tonic-health = "0.13"
tonic-reflection = "0.13"
tower = { version = "0.5", features = [
  "balance",
  "buffer",
  "load",
  "retry",
  "util",
] }
# legacy version because of warp
tower-http = { version = "0.6", features = [
  "compression-gzip",
  "compression-zstd",
  "cors",
] }
tracing = "0.1"
tracing-opentelemetry = "0.28"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "json",
  "std",
  "time",
] }
ttl_cache = "0.5"
typetag = "0.2"
ulid = "1.2"
username = "0.2"
utoipa = { version = "4.2", features = ["time", "ulid"] }
uuid = { version = "1.17", features = ["v4", "serde"] }
vrl = { version = "0.27", default-features = false, features = [
  "compiler",
  "diagnostic",
  "stdlib",
  "value",
] }
warp = { version = "0.4", features = ["server", "test"] }
whichlang = "0.1"
wiremock = "0.6"
zstd = "0.13"

aws-config = "1.8"
aws-credential-types = { version = "1.2", features = ["hardcoded-credentials"] }
aws-runtime = "1.5"
aws-sdk-kinesis = "1.86"
aws-sdk-s3 = "=1.62"
aws-sdk-sqs = "1.82"
aws-smithy-async = "1.2"
aws-smithy-http-client = { version = "1.1", features = ["default-client"] }
aws-smithy-runtime = "1.9"
aws-smithy-types = { version = "1.3", features = [
  "byte-stream-poll-next",
  "http-body-1-x",
] }
aws-types = "1.3"

azure_core = { version = "0.21", features = ["hmac_rust", "enable_reqwest_rustls"] }
azure_identity = { version = "0.21" }
azure_storage = { version = "0.21", default-features = false, features = [
  "enable_reqwest_rustls",
] }
azure_storage_blobs = { version = "0.21", default-features = false, features = [
  "enable_reqwest_rustls",
] }

opendal = { version = "0.53", default-features = false }
reqsign = { version = "0.16", default-features = false }

quickwit-actors = { path = "quickwit-actors" }
quickwit-aws = { path = "quickwit-aws" }
quickwit-cli = { path = "quickwit-cli" }
quickwit-cluster = { path = "quickwit-cluster" }
quickwit-codegen = { path = "quickwit-codegen" }
quickwit-codegen-example = { path = "quickwit-codegen/example" }
quickwit-common = { path = "quickwit-common" }
quickwit-config = { path = "quickwit-config" }
quickwit-control-plane = { path = "quickwit-control-plane" }
quickwit-datetime = { path = "quickwit-datetime" }
quickwit-directories = { path = "quickwit-directories" }
quickwit-doc-mapper = { path = "quickwit-doc-mapper" }
quickwit-index-management = { path = "quickwit-index-management" }
quickwit-indexing = { path = "quickwit-indexing" }
quickwit-ingest = { path = "quickwit-ingest" }
quickwit-integration-tests = { path = "quickwit-integration-tests" }
quickwit-jaeger = { path = "quickwit-jaeger" }
quickwit-janitor = { path = "quickwit-janitor" }
quickwit-macros = { path = "quickwit-macros" }
quickwit-metastore = { path = "quickwit-metastore" }
quickwit-opentelemetry = { path = "quickwit-opentelemetry" }
quickwit-proto = { path = "quickwit-proto" }
quickwit-query = { path = "quickwit-query" }
quickwit-rest-client = { path = "quickwit-rest-client" }
quickwit-search = { path = "quickwit-search" }
quickwit-serve = { path = "quickwit-serve" }
quickwit-storage = { path = "quickwit-storage" }
quickwit-telemetry = { path = "quickwit-telemetry" }

tantivy = { git = "https://github.com/quickwit-oss/tantivy/", rev = "618e3bd", default-features = false, features = [
  "lz4-compression",
  "mmap",
  "quickwit",
  "zstd-compression",
  "columnar-zstd-compression",
] }
tantivy-fst = "0.5"

# This is actually not used directly the goal is to fix the version
# used by reqwest.
encoding_rs = "=0.8.35"

[patch.crates-io]
sasl2-sys = { git = "https://github.com/quickwit-oss/rust-sasl/", rev = "085a4c7" }

## this patched version of tracing helps better understand what happens inside futures (when are
## they polled, how long does poll take...)
#tracing = { git = "https://github.com/trinity-1686a/tracing.git", rev = "6806cac3" }
#tracing-attributes = { git = "https://github.com/trinity-1686a/tracing.git", rev = "6806cac3" }
#tracing-core = { git = "https://github.com/trinity-1686a/tracing.git", rev = "6806cac3" }
#tracing-futures = { git = "https://github.com/trinity-1686a/tracing.git", rev = "6806cac3" }
#tracing-log = { git = "https://github.com/trinity-1686a/tracing.git", rev = "6806cac3" }
#tracing-opentelemetry = { git = "https://github.com/trinity-1686a/tracing.git", rev = "6806cac3" }
#tracing-subscriber = { git = "https://github.com/trinity-1686a/tracing.git", rev = "6806cac3" }

[profile.dev]
debug = false

[profile.release]
lto = "thin"
