[package]
name = "quickwit-actors"
version = "0.3.1"
authors = ["Quickwit, Inc. <hello@quickwit.io>"]
edition = "2021"
license = "AGPL-3.0-or-later" # For a commercial, license, contact hello@quickwit.io
description = "Actor framework used in quickwit"
repository = "https://github.com/quickwit-oss/quickwit"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1"
async-trait = "0.1"
flume = "0.10"
futures = "0.3"
quickwit-common = { version = "0.3.1", path = "../quickwit-common" }
quickwit-proto = { version = "0.3.1", path = "../quickwit-proto" }
thiserror = "1"
tokio = { version = "^1.21", features = ["full"] }
tracing = "0.1.29"

[features]
testsuite = []

[dev-dependencies]
rand = "0.8"
criterion = {version="0.4", features= ["async_tokio"]}

[[bench]]
name = "bench"
harness = false
