[package]
name = "quickwit-actors"
version = "0.3.1"
authors = ["Quickwit, Inc. <hello@quickwit.io>"]
edition = "2021"
license = "AGPL-3.0-or-later"                           # For a commercial, license, contact hello@quickwit.io
description = "Actor framework used in quickwit"
repository = "https://github.com/quickwit-oss/quickwit"
homepage = "https://quickwit.io/"
documentation = "https://quickwit.io/docs/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

quickwit-common = { workspace = true, features = ["metrics", "system"] }
quickwit-proto = { workspace = true }

[features]
testsuite = []

[dev-dependencies]
rand = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "bench"
harness = false
