[package]
name = "quickwit-actors"
description = "Actor framework powering Quickwit services"

version.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sync_wrapper = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

quickwit-common = { workspace = true }

[features]
testsuite = []

[dev-dependencies]
rand = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "bench"
harness = false
